--- a/calculate.html
+++ b/calculate.html
@@ -265,8 +265,36 @@
             <div class="chart_restangles"></div>
             <div class="chart_settings">
                 <div class="chart_data"></div>
-                <div class="chart_stuff">1212</div>
+                <div class="chart_stuff"></div>
             </div>
+        </div>
+        <div class="trends_2d">
+            <span>Аппроксимация</span>
+            <form name="trend_2d_form" class="trend_2d_form">
+                <select class="select_2d_trend_type" name="select_2d_trend_type">
+                    <option value="" disabled selected>Тип</option>
+                    <option value="none">Отсутствует</option>
+                    <option value="0">Линейная</option>
+                    <option value="1">Гиперболическая</option>
+                    <option value="2">Параболическая</option>
+                    <option value="3">Экспоненциальная</option>
+                    <option value="4">Степенная</option>
+                </select>
+                <select class="select_2d_trend_level" name="select_2d_trend_level">
+                    <option value="" disabled selected>Порядок</option>
+                    <option value="0">2</option>
+                    <option value="1">3</option>
+                    <option value="2">4</option>
+                    <option value="3">5</option>
+                    <option value="4">6</option>
+                </select>
+                <label for="number_2d_trend_back">назад на:</label>
+                <input type="number" class="number_2d_trend_back" name="number_2d_trend_back" id="number_2d_trend_back" min="0" max="99" step="1" value="0">
+                <label for="number_2d_trend_forward">вперед на:</label>
+                <input type="number" class="number_2d_trend_forward" name="number_2d_trend_forward" id="number_2d_trend_forward" min="0" max="99" step="1" value="0">
+                <label for="number_2d_trend_step">с шагом:</label>
+                <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step" min="0.1" max="5" step="0.01" value="1">
+            </form>
         </div>
         <select class="select_culture" name="select_culture">
             <option value="" disabled selected>Культура</option>
@@ -357,6 +385,7 @@
 <script src="js/ajax.js" defer></script>
 <script src="js/animation.js" defer></script>
 <script src="js/form_checkers.js" defer></script>
+<script src="js/trends.js" defer></script>
 <script src="js/chart_engine.js" defer></script>
 <script src="js/calculate.js" defer></script>
 <script src="js/common_table_engine.js" defer></script>
