--- a/calculate.html
+++ b/calculate.html
@@ -272,7 +272,6 @@
             <span>Аппроксимация</span>
             <form name="trend_2d_form" class="trend_2d_form">
                 <select class="select_2d_trend_type" name="select_2d_trend_type">
-                    <option value="" disabled selected>Тип</option>
                     <option value="none">Отсутствует</option>
                     <option value="0">Линейная</option>
                     <option value="1">Гиперболическая</option>
@@ -280,21 +279,20 @@
                     <option value="3">Экспоненциальная</option>
                     <option value="4">Степенная</option>
                 </select>
-                <select class="select_2d_trend_level" name="select_2d_trend_level">
-                    <option value="" disabled selected>Порядок</option>
-                    <option value="0">2</option>
-                    <option value="1">3</option>
-                    <option value="2">4</option>
-                    <option value="3">5</option>
-                    <option value="4">6</option>
-                </select>
+                <label for="number_2d_trend_level">порядок:</label>
+                <input type="number" class="number_2d_trend_level" name="number_2d_trend_level" id="number_2d_trend_level" min="2" max="6" step="1" value="2" disabled>
                 <label for="number_2d_trend_back">назад на:</label>
-                <input type="number" class="number_2d_trend_back" name="number_2d_trend_back" id="number_2d_trend_back" min="0" max="99" step="1" value="0">
+                <input type="number" class="number_2d_trend_back" name="number_2d_trend_back" id="number_2d_trend_back" min="0" max="99" step="1" value="0" disabled>
                 <label for="number_2d_trend_forward">вперед на:</label>
-                <input type="number" class="number_2d_trend_forward" name="number_2d_trend_forward" id="number_2d_trend_forward" min="0" max="99" step="1" value="0">
+                <input type="number" class="number_2d_trend_forward" name="number_2d_trend_forward" id="number_2d_trend_forward" min="0" max="99" step="1" value="0" disabled>
                 <label for="number_2d_trend_step">с шагом:</label>
-                <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step" min="0.1" max="5" step="0.01" value="1">
+                <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step" min="0.1" max="5" step="0.01" value="1" disabled>
             </form>
+            <span class="r"></span>
+            <span class="a"></span>
+            <input type="checkbox" id="a_error_checkbox" class="a_error_checkbox">
+            <label for="a_error_checkbox"class="a_error_checkbox_label">Показать ошибку</label>
+            <span class="trend_function"></span>
         </div>
         <select class="select_culture" name="select_culture">
             <option value="" disabled selected>Культура</option>
