--- a/calculate.html
+++ b/calculate.html
@@ -269,7 +269,7 @@
             </div>
         </div>
         <div class="trends_2d">
-            <span>Аппроксимация</span>
+            <span class="trends_2d_header">Аппроксимация</span>
             <form name="trend_2d_form" class="trend_2d_form">
                 <select class="select_2d_trend_type" name="select_2d_trend_type">
                     <option value="none">Отсутствует</option>
@@ -280,19 +280,47 @@
                     <option value="4">Степенная</option>
                 </select>
                 <label for="number_2d_trend_level">порядок:</label>
-                <input type="number" class="number_2d_trend_level" name="number_2d_trend_level" id="number_2d_trend_level" min="2" max="6" step="1" value="2" disabled>
+                <input type="number" class="number_2d_trend_level" name="number_2d_trend_level"
+                    id="number_2d_trend_level" min="2" max="6" step="1" value="2" disabled>
                 <label for="number_2d_trend_back">назад на:</label>
-                <input type="number" class="number_2d_trend_back" name="number_2d_trend_back" id="number_2d_trend_back" min="0" max="99" step="1" value="0" disabled>
+                <input type="number" class="number_2d_trend_back" name="number_2d_trend_back" id="number_2d_trend_back"
+                    min="0" max="99" step="1" value="0" disabled>
                 <label for="number_2d_trend_forward">вперед на:</label>
-                <input type="number" class="number_2d_trend_forward" name="number_2d_trend_forward" id="number_2d_trend_forward" min="0" max="99" step="1" value="0" disabled>
+                <input type="number" class="number_2d_trend_forward" name="number_2d_trend_forward"
+                    id="number_2d_trend_forward" min="0" max="99" step="1" value="0" disabled>
                 <label for="number_2d_trend_step">с шагом:</label>
-                <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step" min="0.1" max="5" step="0.01" value="1" disabled>
+                <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step"
+                    min="0.1" max="5" step="0.01" value="1" disabled>
             </form>
-            <span class="r"></span>
-            <span class="a"></span>
-            <span class="trend_function"></span>
+            <span class="r trend_results"></span>
+            <span class="a trend_results"></span>
+            <span class="trend_function trend_results"></span>
             <input type="checkbox" id="a_error_checkbox" class="a_error_checkbox">
             <label for="a_error_checkbox" class="a_error_checkbox_label">Показать ошибку</label>
+            <div class="trends_2d_optimisation trends_part">
+                <hr class="hr_line">
+                <span class="trends_2d_header">Оптимизация</span>
+                <form name="trends_2d_optimisation_form" class="trends_2d_optimisation_form">
+                    <select class="select_trends_2d_optimisation_method" name="select_trends_2d_optimisation_method">
+                        <option value="0">Дихотомия</option>
+                        <option value="1">Золотое сечение</option>
+                        <option value="2">Фибоначчи</option>
+                    </select>
+                    <select class="select_trends_2d_optimisation_type" name="select_trends_2d_optimisation_type">
+                        <option value="0">Минимум</option>
+                        <option value="1">Максимум</option>
+                    </select>
+                    <input type="number" class="number_trends_2d_optimisation_left"
+                        name="number_trends_2d_optimisation_left" id="number_trends_2d_optimisation_left "placeholder="левая граница">
+                    <input type="number" class="number_trends_2d_optimisation_right"
+                        name="number_trends_2d_optimisation_right" id="number_trends_2d_optimisation_right" placeholder="правая граница">
+                    <input type="button" class="button_trends_2d_optimisation" name="button_trends_2d_optimisation" value="Найти">
+                </form>
+            </div>
+            <div class="trends_2d_imitation trends_part">
+                <hr class="hr_line">
+                <span class="trends_2d_header">Имитационное моделирование</span>
+            </div>
         </div>
         <select class="select_culture" name="select_culture">
             <option value="" disabled selected>Культура</option>
