--- a/calculate.html
+++ b/calculate.html
@@ -316,6 +316,8 @@
                         name="number_trends_2d_optimisation_right" id="number_trends_2d_optimisation_right" placeholder="правая граница">
                     <input type="button" class="button_trends_2d_optimisation" name="button_trends_2d_optimisation" value="Найти">
                 </form>
+                <span class="x_opt trend_results"></span>
+                <span class="y_opt trend_results"></span>
             </div>
             <div class="trends_2d_imitation trends_part">
                 <hr class="hr_line">
