before 1dim methods

--- a/calculate.html
+++ b/calculate.html
@@ -302,6 +302,7 @@
                 <span class="trends_2d_header">Оптимизация</span>
                 <form name="trends_2d_optimisation_form" class="trends_2d_optimisation_form">
                     <select class="select_trends_2d_optimisation_method" name="select_trends_2d_optimisation_method">
+                        <option value="none">Отсутствует</option>
                         <option value="0">Дихотомия</option>
                         <option value="1">Золотое сечение</option>
                         <option value="2">Фибоначчи</option>
