--- a/calculate.html
+++ b/calculate.html
@@ -415,6 +415,7 @@
 <script src="js/animation.js" defer></script>
 <script src="js/form_checkers.js" defer></script>
 <script src="js/trends.js" defer></script>
+<script src="js/optimisation.js" defer></script>
 <script src="js/chart_engine.js" defer></script>
 <script src="js/calculate.js" defer></script>
 <script src="js/common_table_engine.js" defer></script>
