--- a/calculate.html
+++ b/calculate.html
@@ -290,7 +290,8 @@
                     id="number_2d_trend_forward" min="0" max="99" step="1" value="0" disabled>
                 <label for="number_2d_trend_step">с шагом:</label>
                 <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step"
-                    min="0.1" max="5" step="0.01" value="1" disabled>
+                    min="0.1" max="100" step="0.1" value="1" disabled>
+                <input type="button" class="button_2d_trend" name="button_2d_trend" value="Построить">
             </form>
             <span class="r trend_results"></span>
             <span class="a trend_results"></span>
