--- a/calculate.html
+++ b/calculate.html
@@ -433,7 +433,7 @@
 <script src="js/form_checkers.js" defer></script>
 <script src="js/trends.js" defer></script>
 <script src="js/optimisation.js" defer></script>
-<script src="js/2d_chart_engine.js" defer></script>
+<script src="js/chart_engine.js" defer></script>
 <script src="js/calculate.js" defer></script>
 <script src="js/common_table_engine.js" defer></script>
 
