--- a/calculate.html
+++ b/calculate.html
@@ -332,21 +332,16 @@
                 <span class="trends_2d_header">Имитационное моделирование</span>
                 <div class="imitation_div">
                     <table class="imitation_table">
-                        <tr>
-                            <td class="x_name">&nbsp;</td>
-                        </tr>
-                        <tr>
-                            <td class="y_name">&nbsp;</td>
-                        </tr>
                     </table>
                     <ul class="right_context_menu">
                         <li class="r_col">Вставить столбец</li>
                         <li class="r_delete_col">Удалить столбец</li>
                     </ul>
-                    <div class="td_selection"><iframe name="td_selection_frame"></iframe></div>
                 </div>
             </div>
-            <span class="trends_2d_header">Интерполяция</span>
+            <div class="trends_2d_interpolation trends_part">
+                <span class="trends_2d_header">Интерполяция</span>
+            </div>
         </div>
         <div class="trends_3d">
             <span class="trends_3d_header">Интерполяция</span>
