--- a/calculate.html
+++ b/calculate.html
@@ -13,7 +13,7 @@
         <span class="bd_e_preloader">Qwerty</span>
     </div>
     <header>
-        <a href="#">Главная</a>
+        <a href="home.html">Главная</a>
         <a href="settings.html">Настройки</a>
         <span>Экопрогноз</span>
     </header>
