--- a/registration.html
+++ b/registration.html
@@ -5,36 +5,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация - Экопрогноз</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/styles_auth.css" />
+    <link rel="stylesheet" href="css/common_styles.css" />
+    <!--<link rel="stylesheet" href="css/styles_auth.css" />-->
 </head>
-
-<header>
-    <a href="login.html">Вход</a>
-    <span>Экопрогноз</span>
-</header>
 
 <body>
     <div class="preloader"></div>
-    <div class="registration">
-        <div class="registration_content">
-            <div class="loader"></div>     
-            <span class="auth_span">Регистрация</span>
-            <form name="registration_form" class="registration_form" action="php/reg.php" method="POST" novalidate>
-                <span class="bd_e">Qwerty</span>
-                <span class="send_email_e">Qwerty</span>
-                <input type="email" name="email" class="email" placeholder="Ваш e-mail">
-                <span class="email_e">Qwerty</span>
-                <input type="text" name="name" class="name" placeholder="Имя Фамилия">
-                <span class="name_e">Qwerty</span>
-                <input type="password" name="password1" class="password1" placeholder="Придумайте пароль">
-                <span class="password1_e">Qwerty</span>
-                <input type="password" name="password2" class="password2" placeholder="Повторите пароль">
-                <span class="password2_e">Qwerty</span>
-                <input type="submit" name="reg_button" class="reg_button" value="Зарегистрироваться">
-            </form>
+    <div class="container">
+        <header>
+            <a href="login.html">Вход</a>
+            <span>Экопрогноз</span>
+        </header>
+        <div class="wrapper registration">
+            <!--<div class="registration_content">
+                <div class="loader"></div>
+                <span class="auth_span">Регистрация</span>
+                <form name="registration_form" class="registration_form" action="php/reg.php" method="POST" novalidate>
+                    <span class="bd_e">Qwerty</span>
+                    <span class="send_email_e">Qwerty</span>
+                    <input type="email" name="email" class="email" placeholder="Ваш e-mail">
+                    <span class="email_e">Qwerty</span>
+                    <input type="text" name="name" class="name" placeholder="Имя Фамилия">
+                    <span class="name_e">Qwerty</span>
+                    <input type="password" name="password1" class="password1" placeholder="Придумайте пароль">
+                    <span class="password1_e">Qwerty</span>
+                    <input type="password" name="password2" class="password2" placeholder="Повторите пароль">
+                    <span class="password2_e">Qwerty</span>
+                    <input type="submit" name="reg_button" class="reg_button" value="Зарегистрироваться">
+                </form>
+            </div>-->
+            989898
+            989898
+            989898
+            989898
+            989898
+            989898989898
+            989898
+            989898
+            989898
+            989898
+            989898
+            989898989898
+            989898
+            989898
+            989898
+            989898
+            989898
+            989898989898
+            989898
+            989898
+            989898
+            989898
+            989898
+            989898989898
+            989898
+            989898
+            989898
+            989898
+            989898
+            989898989898
+            989898
+            989898
+            989898
+            989898
+            989898
+            989898989898
+
         </div>
+        <footer>
+            989898
+        </footer>
     </div>
+    <script src="js/styles.js" defer></script>
     <script src="js/ajax.js" defer></script>
     <script src="js/animation.js" defer></script>
     <script src="js/form_checkers.js" defer></script>
