--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <ul class="navigation">
-                <li><a class="link" href="registration.html">Регистрация</a>
+                <li><a href="registration.html">Регистрация</a>
             </ul>
             <span class="app_name">Экопрогноз</span>
         </header>
