--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header>
             <ul class="navigation">
-                <li><a class="link" href="login.html">Вход</a>
+                <li><a href="login.html">Вход</a>
             </ul>
             <span class="app_name">Экопрогноз</span>
         </header>
@@ -39,14 +39,6 @@
             <div></div>
         </div>
         <footer>
-            <!--<ul class="tabs">
-                <li><input type="radio" name="rad" value="1" id="tab_1" checked>
-                    <label for="tab_1">Факторы погоды</label>
-                <li><input type="radio" name="rad" value="2" id="tab_2">
-                    <label for="tab_2">Поля</label>
-                <li><input type="radio" name="rad" value="3" id="tab_3">
-                    <label for="tab_3">Культуры</label>
-            </ul>-->
             <span class="app_info">© Андрей Макаров, 2021</span>
             <span class="app_info"></span>
         </footer>
