--- a/home.html
+++ b/home.html
@@ -27,7 +27,33 @@
             <span class="app_name">Экопрогноз</span>
         </header>
         <div class="wrapper home">
-
+            <div class="table_header">
+                <table class="table_header">
+                    <tr>
+                        <th>Годdddddddddddd</th>
+                        <th>Культура</th>
+                        <th>Поле</th>
+                        <th>∑О,мм</th>
+                        <th>∑t,°C</th>
+                        <th>∑t≥10°C</th>
+                        <th>∑t≥15°C</th>
+                        <th>∑t≥20°C</th>
+                        <th>∑О≥2мм</th>
+                        <th>∑В,%</th>
+                        <th>∑В≥40%</th>
+                        <th>∑В≥45%</th>
+                        <th>∑В≥50%</th>
+                        <th>ЧД(О)</th>
+                        <th>ЧД(t≥10°C)</th>
+                        <th>ЧД(t≥15°C)</th>
+                        <th>ЧД(t≥20°C)</th>
+                        <th>ЧД(О≥2мм)</th>
+                        <th>ЧД(В≥40%)</th>
+                        <th>ЧД(В≥45%)</th>
+                        <th>ЧД(В≥50%)</th>
+                    </tr>
+                </table>
+            </div>
         </div>
         <footer>
             <ul class="tabs">
@@ -161,7 +187,7 @@
     </div>
 </footer>-->
 
-    <script src="js/ajax.js" defer></script>
+    <!--<script src="js/ajax.js" defer></script>
     <script src="js/animation.js" defer></script>
     <script src="js/form_checkers.js" defer></script>
     <script src="js/home.js" defer></script>
@@ -171,6 +197,6 @@
     <script src="js/context_engine.js" defer></script>
     <script src="js/input_engine.js" defer></script>
     <script src="js/history_engine.js" defer></script>
-    <script src="js/map.js" defer></script>
+    <script src="js/map.js" defer></script>-->
 
 </html>
