--- a/home.html
+++ b/home.html
@@ -645,7 +645,152 @@
             <div class="table_header">
                 <table class="table_header">
                     <tr>
-                        <th>Название поля</th>
+                        <th>Поле</th>
+                        <th>Владелец</th>
+                        <th>Координаты</th>
+                    </tr>
+                    <table class="empty_table">
+                        <tr>
+                            <th>empty</th>
+                        </tr>
+                    </table>
+            </div>
+            <div class="table_body">
+                <table class="table_body">
+                    <tr>
+                        <td contenteditable>16</td>
+                        <td contenteditable>30</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>22</td>
+                        <td contenteditable>63</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>78</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>46</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>2</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>27</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>70</td>
+                        <td contenteditable>57</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>23</td>
+                        <td contenteditable>25</td>
+                        <td contenteditable>23</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>45</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>60</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>64</td>
+                        <td contenteditable>19</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>11</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>35</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>89</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>97</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>71</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>75</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>45</td>
+                        <td contenteditable>76</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>69</td>
+                        <td contenteditable>44</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>84</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>56</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>70</td>
+                        <td contenteditable>2</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>22</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>65</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>33</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>29</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>94</td>
+                        <td contenteditable>95</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>74</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>13</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>56</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>13</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>19</td>
+                        <td contenteditable>58</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>78</td>
+                        <td contenteditable>22</td>
+                        <td contenteditable>65</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>78</td>
+                        <td contenteditable>68</td>
+                        <td contenteditable>92</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>57</td>
+                        <td contenteditable>78</td>
+                        <td contenteditable>50</td>
+                    </tr>
+                    <tr>
+                        <td contenteditable>8</td>
+                        <td contenteditable>61</td>
+                        <td contenteditable>78</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- 2nd -->
+        <div class="wrapper home">
+            <div class="table_header">
+                <table class="table_header">
+                    <tr>
+                        <th>Поле</th>
                         <th>Владелец</th>
                         <th>Координаты</th>
                     </tr>
@@ -769,6 +914,7 @@
             </ul>
         </footer>
     </div>
+    <script src="js/v2_home.js" defer></script>
     <script src="js/v2_table_engine.js" defer></script>
 </body>
 <!--<div class="fast"></div>
