--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             <!-- 1st -->
             <div class="table_wrapper">
                 <div class="table">
-                    <div class="table_header">
+                    <div class="table_header_wrapper">
                         <table class="table_header">
                             <tr>
                                 <th>Годdddddddddddd</th>
@@ -63,8 +63,10 @@
                             </table>-->
                         </table>
                     </div>
-                    <div class="table_body">
+                    <div class="table_body_wrapper">
+                        <div class="cell_selection"></div>
                         <table class="table_body">
+                            
                             <tr>
                                 <td contenteditable>20</td>
                                 <td contenteditable>54</td>
@@ -650,7 +652,7 @@
         <div class="wrapper home">
             <div class="table_wrapper">
                 <div class="table">
-                    <div class="table_header">
+                    <div class="table_header_wrapper">
                         <table class="table_header">
                             <tr>
                                 <th>Поле</th>
@@ -664,7 +666,7 @@
                             </table>-->
                         </table>
                     </div>
-                    <div class="table_body">
+                    <div class="table_body_wrapper">
                         <table class="table_body">
                             <tr>
                                 <td contenteditable>16</td>
@@ -770,7 +772,7 @@
             </div>
             <div class="table_wrapper">
                 <div class="table">
-                    <div class="table_header">
+                    <div class="table_header_wrapper">
                         <table class="table_header">
                             <tr>
                                 <th>Культура</th>
@@ -783,7 +785,7 @@
                             </table>-->
                         </table>
                     </div>
-                    <div class="table_body">
+                    <div class="table_body_wrapper">
                         <table class="table_body">
                             <tr>
                                 <td contenteditable>18</td>
