--- a/home.html
+++ b/home.html
@@ -65,8 +65,8 @@
                     </div>
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
+                        <iframe name="frame1" width=100% height=100% style="position:absolute;z-index:-1"></iframe>
                         <table class="table_body">
-                            
                             <tr>
                                 <td contenteditable>20</td>
                                 <td contenteditable>54</td>
@@ -667,6 +667,8 @@
                         </table>
                     </div>
                     <div class="table_body_wrapper">
+                        <div class="cell_selection"></div>
+                        <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
                         <table class="table_body">
                             <tr>
                                 <td contenteditable>16</td>
@@ -786,6 +788,8 @@
                         </table>
                     </div>
                     <div class="table_body_wrapper">
+                        <div class="cell_selection"></div>
+                        <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
                         <table class="table_body">
                             <tr>
                                 <td contenteditable>18</td>
@@ -861,6 +865,7 @@
             </ul>
         </footer>
     </div>
+    <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
     <script src="js/v2_table_engine.js" defer></script>
     <script src="js/v2_home.js" defer></script>
 </body>
