--- a/home.html
+++ b/home.html
@@ -65,8 +65,7 @@
                     </div>
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
-                        <iframe name="frame1" width=100% height=100% style="position:absolute;z-index:-1"></iframe>
-                        <table class="table_body">
+                        <table class="table_body" tabindex="0">
                             <tr>
                                 <td contenteditable>20</td>
                                 <td contenteditable>54</td>
@@ -669,7 +668,7 @@
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
                         <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
-                        <table class="table_body">
+                        <table class="table_body" tabindex="0">
                             <tr>
                                 <td contenteditable>16</td>
                                 <td contenteditable>30</td>
@@ -790,7 +789,7 @@
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
                         <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
-                        <table class="table_body">
+                        <table class="table_body" tabindex="0">
                             <tr>
                                 <td contenteditable>18</td>
                             </tr>
