--- a/home.html
+++ b/home.html
@@ -863,9 +863,21 @@
                     <label for="tab_2">Поля / Культуры</label>
             </ul>
         </footer>
+        <ul class="right_context_menu context_menu">
+            <li class="r_copy">Копировать</li>
+            <li class="r_paste">Вставить</li>
+            <li class="r_сut">Вырезать</li>
+            <li class="r_clear">Очистить</li>
+            <li class="r_row_up">Cтроку сверху</li>
+            <li class="r_row_down">Cтроку снизу</li>
+            <li class="r_delete_row">Удалить строку</li>
+        </ul>
+        <ul class="left_context_menu context_menu"></ul>
     </div>
+    
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
     <script src="js/v2_table_engine.js" defer></script>
+    <script src="js/v2_context_engine.js" defer></script>
     <script src="js/v2_home.js" defer></script>
 </body>
 <!--<div class="fast"></div>
