--- a/home.html
+++ b/home.html
@@ -876,6 +876,7 @@
     </div>
     
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
+    <script src="js/clipboard.min.js"></script>
     <script src="js/v2_table_engine.js" defer></script>
     <script src="js/v2_context_engine.js" defer></script>
     <script src="js/v2_home.js" defer></script>
