left context done

--- a/home.html
+++ b/home.html
@@ -668,7 +668,7 @@
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
                         <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
-                        <table class="table_body" tabindex="0">
+                        <table class="table_body fields" tabindex="0">
                             <tr>
                                 <td contenteditable>16</td>
                                 <td contenteditable>30</td>
@@ -789,7 +789,7 @@
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
                         <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
-                        <table class="table_body" tabindex="0">
+                        <table class="table_body cultures" tabindex="0">
                             <tr>
                                 <td contenteditable>18</td>
                             </tr>
@@ -877,6 +877,7 @@
     
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
     <script src="js/clipboard.min.js"></script>
+    <script src="js/v2_common.js" defer></script>
     <script src="js/v2_table_engine.js" defer></script>
     <script src="js/v2_context_engine.js" defer></script>
     <script src="js/v2_home.js" defer></script>
