--- a/home.html
+++ b/home.html
@@ -34,27 +34,27 @@
                     <div class="table_header_wrapper">
                         <table class="table_header">
                             <tr>
-                                <th>Год</th>
-                                <th>Поле</th>
-                                <th>Культура</th>
-                                <th>∑О,мм</th>
-                                <th>∑t,°C</th>
-                                <th>∑t≥10°C</th>
-                                <th>∑t≥15°C</th>
-                                <th>∑t≥20°C</th>
-                                <th>∑О≥2мм</th>
-                                <th>∑В,%</th>
-                                <th>∑В≥40%</th>
-                                <th>∑В≥45%</th>
-                                <th>∑В≥50%</th>
-                                <th>ЧД(О)</th>
-                                <th>ЧД(t≥10°C)</th>
-                                <th>ЧД(t≥15°C)</th>
-                                <th>ЧД(t≥20°C)</th>
-                                <th>ЧД(О≥2мм)</th>
-                                <th>ЧД(В≥40%)</th>
-                                <th>ЧД(В≥45%)</th>
-                                <th>ЧД(В≥50%)</th>
+                                <th class="int">Год</th>
+                                <th class="field">Поле</th>
+                                <th class="culture">Культура</th>
+                                <th class="double">∑О,мм</th>
+                                <th class="int">∑t,°C</th>
+                                <th class="int">∑t≥10°C</th>
+                                <th class="int">∑t≥15°C</th>
+                                <th class="int">∑t≥20°C</th>
+                                <th class="double">∑О≥2мм</th>
+                                <th class="int">∑В,%</th>
+                                <th class="int">∑В≥40%</th>
+                                <th class="int">∑В≥45%</th>
+                                <th class="int">∑В≥50%</th>
+                                <th class="int">ЧД(О)</th>
+                                <th class="int">ЧД(t≥10°C)</th>
+                                <th class="int">ЧД(t≥15°C)</th>
+                                <th class="int">ЧД(t≥20°C)</th>
+                                <th class="int">ЧД(О≥2мм)</th>
+                                <th class="int">ЧД(В≥40%)</th>
+                                <th class="int">ЧД(В≥45%)</th>
+                                <th class="int">ЧД(В≥50%)</th>
                             </tr>
                             <!--<table class="empty_table">
                                 <tr>
@@ -68,8 +68,8 @@
                         <table class="table_body" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
-                                <td contenteditable></td>
-                                <td contenteditable></td>
+                                <td></td>
+                                <td></td>
                                 <td contenteditable></td>
                                 <td contenteditable></td>
                                 <td contenteditable></td>
@@ -102,9 +102,9 @@
                     <div class="table_header_wrapper">
                         <table class="table_header">
                             <tr>
-                                <th>Поле</th>
-                                <th>Владелец</th>
-                                <th>Координаты</th>
+                                <th class="any">Поле</th>
+                                <th class="any">Владелец</th>
+                                <th class="any">Координаты</th>
                             </tr>
                             <!--<table class="empty_table">
                                 <tr>
@@ -134,7 +134,7 @@
                     <div class="table_header_wrapper">
                         <table class="table_header">
                             <tr>
-                                <th>Культура</th>
+                                <th class="any">Культура</th>
                             </tr>
                             <!--
                             <table class="empty_table">
@@ -185,6 +185,7 @@
     <script src="js/v2_common.js" defer></script>
     <script src="js/v2_table_engine.js" defer></script>
     <script src="js/v2_context_engine.js" defer></script>
+    <script src="js/v2_input_engine.js" defer></script>
     <script src="js/v2_home.js" defer></script>
 </body>
 
