--- a/calculate.html
+++ b/calculate.html
@@ -216,10 +216,34 @@
             </div>
         </div>
         <div class="wrapper 2d_chart">
-
+            <div class="charts_container">
+                <div class="2D_chart_div">
+                    <div class="plotly_div">8787</div>
+                    <form name="param_form" class="param_form">
+                        <span class="add_chart_button">+</span>
+                    </form>
+                    <span class="span_chart_info"></span>
+                    <div class="chart_restangles"></div>
+                    <div class="chart_settings">
+                        <div class="chart_data"></div>
+                        <div class="chart_stuff"></div>
+                    </div>
+                </div>
+                <div class="new_chart_form_div">
+                    <form name="new_chart_form" class="new_chart_form">
+                        <input type="button" class="add_2d_button" name="add_2d_button" value="Новый 2D график">
+                    </form>
+                </div>
+            </div>
         </div>
         <div class="wrapper 3d_chart">
-
+            <div class="charts_container">
+                <div class="new_chart_form_div">
+                    <form name="new_chart_form" class="new_chart_form">
+                        <input type="button" class="add_3d_button" name="add_2d_button" value="Новый 3D график">
+                    </form>
+                </div>
+            </div>
         </div>
         <footer>
             <ul class="tabs">
@@ -242,244 +266,7 @@
     <script src="js/v2_input_engine.js" defer></script>
     <script src="js/v2_calculate.js" defer></script>
 
-    <!--<div class="preloader">
-        <span class="bd_e error">bd_e</span>
-    </div>
-    <header>
-        <a href="home.html">Главная</a>
-        <a href="settings.html">Настройки</a>
-        <span>Экопрогноз</span>
-    </header>
-    <div class="content">
-        <div class="search_div">
-            <form name="search" class="search_form">
-                <div>
-                    <input type="number" name="year1" placeholder="Начальный год">
-                </div>
-                <div>
-                    <input type="number" name="year2" placeholder="Конечный год">
-                </div>
-                <div>
-                    <input type="text" name="culture" placeholder="Культура">
-                </div>
-                <div>
-                    <input type="text" name="field" placeholder="Поле">
-                </div>
-                <div>
-                    <input type="submit" name="calculate" value="Расчет">
-                </div>
-            </form>
-        </div>
-        <div class="container">
-            <div class="horiz_stub_bottom"></div>
-            <div class="vert_stub_left"></div>
-            <div class="vert_stub_right"></div>
-            <div class="table_div">
-                <div class="table_header_div">
-                    <table class="table_empty">
-                        <tr>
-                            <th>empty</th>
-                        </tr>
-                    </table>
-                    <table class="table_header">
-                        <tr>
-                            <th>Год</th>
-                            <th width="200px">Культура</th>
-                            <th width="200px">Поле</th>
-
-                            <th>∑О,мм</th>
-                            <th>∑t,°C</th>
-                            <th>X1</th>
-
-                            <th>∑О,мм</th>
-                            <th>∑t≥10°C</th>
-                            <th>X2</th>
-
-                            <th>∑О,мм</th>
-                            <th>∑t≥15°C</th>
-                            <th>X3</th>
-
-                            <th>∑О,мм</th>
-                            <th>∑t≥20°C</th>
-                            <th>X4</th>
-
-                            <th>∑О≥2мм</th>
-                            <th>∑t,°C</th>
-                            <th>X5</th>
-
-                            <th>∑О≥2мм</th>
-                            <th>∑t≥10°C</th>
-                            <th>X6</th>
-
-                            <th>∑О≥2мм</th>
-                            <th>∑t≥15°C</th>
-                            <th>X7</th>
-
-                            <th>∑О≥2мм</th>
-                            <th>∑t≥20°C</th>
-                            <th>X8</th>
-
-                            <th>∑В,%</th>
-                            <th>∑t,°C</th>
-                            <th>X9</th>
-
-                            <th>∑В,%</th>
-                            <th>∑t≥10°C</th>
-                            <th>X10</th>
-
-                            <th>∑В,%</th>
-                            <th>∑t≥15°C</th>
-                            <th>X11</th>
-
-                            <th>∑В,%</th>
-                            <th>∑t≥20°C</th>
-                            <th>X12</th>
-
-                            <th>∑В≥40%</th>
-                            <th>∑t,°C</th>
-                            <th>X13</th>
-
-                            <th>∑В≥45%</th>
-                            <th>∑t,°C</th>
-                            <th>X14</th>
-
-                            <th>∑В≥50%</th>
-                            <th>∑t,°C</th>
-                            <th>X15</th>
-
-                            <th>∑В≥40%</th>
-                            <th>∑t≥10°C</th>
-                            <th>X16</th>
-
-                            <th>∑В≥40%</th>
-                            <th>∑t≥15°C</th>
-                            <th>X17</th>
-
-                            <th>∑В≥40%</th>
-                            <th>∑t≥20°C</th>
-                            <th>X18</th>
-
-                            <th>∑В≥45%</th>
-                            <th>∑t≥10°C</th>
-                            <th>X19</th>
-
-                            <th>∑В≥45%</th>
-                            <th>∑t≥15°C</th>
-                            <th>X20</th>
-
-                            <th>∑В≥45%</th>
-                            <th>∑t≥20°C</th>
-                            <th>X21</th>
-
-                            <th>∑В≥50%</th>
-                            <th>∑t≥10°C</th>
-                            <th>X22</th>
-
-                            <th>∑В≥50%</th>
-                            <th>∑t≥15°C</th>
-                            <th>X23</th>
-
-                            <th>∑В≥50%</th>
-                            <th>∑t≥20°C</th>
-                            <th>X24</th>
-
-                            <th>ЧД(О)</th>
-                            <th>ЧД(t≥10°C)</th>
-                            <th>X25</th>
-
-                            <th>ЧД(О)</th>
-                            <th>ЧД(t≥15°C)</th>
-                            <th>X26</th>
-
-                            <th>ЧД(О)</th>
-                            <th>ЧД(t≥20°C)</th>
-                            <th>X27</th>
-
-                            <th>ЧД(О≥2мм)</th>
-                            <th>ЧД(t≥10°C)</th>
-                            <th>X28</th>
-
-                            <th>ЧД(О≥2мм)</th>
-                            <th>ЧД(t≥15°C)</th>
-                            <th>X29</th>
-
-                            <th>ЧД(О≥2мм)</th>
-                            <th>ЧД(t≥20°C)</th>
-                            <th>X30</th>
-
-                            <th>ЧД(В≥40%)</th>
-                            <th>ЧД(t≥10°C)</th>
-                            <th>X31</th>
-
-                            <th>ЧД(В≥40%)</th>
-                            <th>ЧД(t≥15°C)</th>
-                            <th>X32</th>
-
-                            <th>ЧД(В≥40%)</th>
-                            <th>ЧД(t≥20°C)</th>
-                            <th>X33</th>
-
-                            <th>ЧД(В≥45%)</th>
-                            <th>ЧД(t≥10°C)</th>
-                            <th>X34</th>
-
-                            <th>ЧД(В≥45%)</th>
-                            <th>ЧД(t≥15°C)</th>
-                            <th>X35</th>
-
-                            <th>ЧД(В≥45%)</th>
-                            <th>ЧД(t≥20°C)</th>
-                            <th>X36</th>
-
-                            <th>ЧД(В≥50%)</th>
-                            <th>ЧД(t≥10°C)</th>
-                            <th>X37</th>
-
-                            <th>ЧД(В≥50%)</th>
-                            <th>ЧД(t≥15°C)</th>
-                            <th>X38</th>
-
-                            <th>ЧД(В≥50%)</th>
-                            <th>ЧД(t≥20°C)</th>
-                            <th>X39</th>
-                        </tr>
-                    </table>
-                </div>
-                <div class="table_body_div">
-                    <iframe name="content_frame"></iframe>
-                    <table class="table_body" tabindex="0"></table>
-                    <div class="td_selection"><iframe name="td_selection_frame"></iframe></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="content">
-        <div class="chart_container">
-            <div class="new_chart_form_div">
-                <form name="new_chart_form" class="new_chart_form">
-                    <input type="button" class="add_2d_button" name="add_2d_button" value="Новый 2D график">
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="content">
-        <div class="chart_container">
-            <div class="new_chart_form_div">
-                <form name="new_chart_form" class="new_chart_form">
-                    <input type="button" class="add_3d_button" name="add_2d_button" value="Новый 3D график">
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="content">
-        <div class="chart_container">
-            <div class="new_chart_form_div">
-                <form name="new_chart_form" class="new_chart_form">
-                    <input type="button" class="add_drm_button" name="add_drm_button" value="Новая диаграмма">
-                </form>
-            </div>
-        </div>
-    </div>
+    <!--
     <div class="common">
         <div class="checkbox_td">
             <input type="checkbox" id="chart_checkbox" class="chart_checkbox">
