--- a/calculate.html
+++ b/calculate.html
@@ -215,9 +215,9 @@
                 </div>
             </div>
         </div>
-        <div class="wrapper 2d_chart">
+        <div class="wrapper chart_2d">
             <div class="charts_container">
-                <div class="2D_chart_div">
+                <div class="chart_div chart_2d_div">
                     <div class="plotly_div">8787</div>
                     <form name="param_form" class="param_form">
                         <span class="add_chart_button">+</span>
